jekyll testing, default html created

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,27 +14,7 @@
 <body>
 
 <!-- load other layouts here: -->
-<div id="mainContent">
-    <div id='map'></div>
-    <h1 id="header">Where to go?</h1>
-    <div id="sideMenu">
-    </div>
-</div>
-
-<div id="popup-window" class="hide">
-    <img src="http://enlinea.tecniseguros.com.ec:8081/CotizadorVehiculos/imagenes/x.png" id='close-button'></img>
-    <h1>Add map element</h1>
-    <div class="input-div">
-        <input id="pop-name"placeholder="name"></input>
-        <input id="pop-score"placeholder="rating"></input>
-        <input id="pop-link"placeholder="link"></input>
-        <input id="pop-img"placeholder="image"></input>
-        <input id="pop-lat"placeholder="lat"></input>
-        <input id="pop-long"placeholder="long"></input>
-    </div>
-    <button id="saveNewElement-btn"> Save </button>
-</div>
-
+{{content}}
 
 <script type="text/javascript" src="js/hostels.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
