--- a/public/styles/markers.scss
+++ b/public/styles/markers.scss
@@ -9,3 +9,13 @@
     width: 70px;
     height: 70px;
 }
+
+.marker.hostels{
+    border: 2px solid red;
+}
+.marker.restaurants{
+    border: 2px solid blue;
+}
+.marker.cites{
+    border: 3px solid green;
+}
