--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -22,6 +22,27 @@ body {
   #map {
     width:100vw;
     height: 80vh;
+    min-height: 395px;
+  }
+  #map-markers-menu{
+    position: absolute;
+    left: 10px;
+    top: 110px;
+
+    img{
+      width: 44px;
+      background-color: white;
+      border-radius: 6px;
+      padding: 4px;
+      display: -webkit-box;
+      margin-top: 8px;
+    }
+    img:hover{
+      cursor: pointer;
+    }
+    .disable{
+      opacity: 0.5;
+    }
   }
 }
 
