--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -36,6 +36,7 @@ body {
       padding: 4px;
       display: -webkit-box;
       margin-top: 8px;
+      box-shadow: 3px 4px 10px #989898;      
     }
     img:hover{
       cursor: pointer;
