--- a/public/styles/markers.scss
+++ b/public/styles/markers.scss
@@ -6,12 +6,12 @@
     padding: 0;
     background-position: center;
     background-size: cover;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
 }
 
 .marker.hostels{
-    border: 2px solid red;
+    border: 2px solid rgba(144, 144, 144, 0.37);
 }
 .marker.restaurants{
     border: 2px solid blue;
