--- a/public/styles/recipe.scss
+++ b/public/styles/recipe.scss
@@ -14,6 +14,14 @@ body{
             margin-right: auto;
             display: -webkit-box;
         }
+        a{
+            width: 80%;
+            margin-left: auto;
+            margin-right: auto;
+            display: -webkit-box;
+            font-size: 16px;
+            margin-top: 7px;
+        }
         h1{
             margin-left: auto;
             margin-right: auto;
